Fix spacing

--- a/public/styles.css
+++ b/public/styles.css
@@ -21,8 +21,8 @@ body button {
 
 #break{
     text-align: center;
-    margin-top: 5vh;
-    margin-bottom: 8vh;
+    margin-top: 2vh;
+    margin-bottom: 4vh;
 }
 #listHeader {
   margin-top: 0px;
